Code linting and formatting
Use lombok, JDK 17 syntax, improve formatting, ...