@@ -9,25 +9,23 @@ import com.datastax.oss.driver.internal.core.cql.DefaultColumnDefinition;
 import com.datastax.oss.driver.internal.core.cql.DefaultColumnDefinitions;
 import com.datastax.oss.driver.internal.core.cql.DefaultRow;
 import com.ing.data.cassandra.jdbc.ColumnDefinitions;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
 import jakarta.annotation.Nonnull;
+import lombok.extern.slf4j.Slf4j;
+
 import java.io.File;
 import java.nio.ByteBuffer;
 import java.sql.SQLSyntaxErrorException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Optional;
 import java.util.Properties;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import static com.ing.data.cassandra.jdbc.utils.DriverUtil.SINGLE_QUOTE;
 import static com.ing.data.cassandra.jdbc.utils.ErrorConstants.MISSING_SOURCE_FILENAME;
+import static java.util.stream.Collectors.toList;
 import static org.apache.commons.lang3.StringUtils.EMPTY;
 import static org.apache.commons.lang3.StringUtils.unwrap;
 
@@ -36,9 +34,8 @@ import static org.apache.commons.lang3.StringUtils.unwrap;
  * <a href="https://cassandra.apache.org/doc/stable/cassandra/tools/cqlsh.html#special-commands">special CQL
  * commands</a>.
  */
+@Slf4j
 public final class SpecialCommandsUtil {
-
-    static final Logger LOG = LoggerFactory.getLogger(SpecialCommandsUtil.class);
 
     // Regex for CQL identifiers such as table or keyspace name is specified in the Cassandra documentation here:
     // https://cassandra.apache.org/doc/5.0/cassandra/developing/cql/ddl.html#common-definitions
@@ -96,7 +93,7 @@ public final class SpecialCommandsUtil {
         final String trimmedCql = cql.trim();
         final Matcher matcher = SUPPORTED_COMMANDS_PATTERN.matcher(trimmedCql);
         if (!matcher.matches()) {
-            LOG.trace("CQL statement is not a supported special command: {}", cql);
+            log.trace("CQL statement is not a supported special command: {}", cql);
             return null;
         } else {
             return handleConsistencyLevelCommand(matcher)
@@ -113,7 +110,7 @@ public final class SpecialCommandsUtil {
      * @return The empty result set.
      */
     public static ResultSet buildEmptyResultSet() {
-        return buildSpecialCommandResultSet(new ColumnDefinitions.Definition[]{}, Collections.emptyList());
+        return buildSpecialCommandResultSet(new ColumnDefinitions.Definition[]{}, List.of());
     }
 
     /**
@@ -137,7 +134,7 @@ public final class SpecialCommandsUtil {
         // Populate rows.
         final List<Row> rsRows = rows.stream()
             .map(rowData -> new DefaultRow(rsColumns, rowData))
-            .collect(Collectors.toList());
+            .collect(toList());
 
         return new ResultSet() {
             @Override
